objects/LiveChatTranscript.object
<CustomObject>
    <fields>
        <fullName>AW_Username__c</fullName>
        <description>This field is created to override the pre-chat form in chat bot.</description>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD_BotLanguage__c</fullName>
        <description>Capture the Language of Bot</description>
        <label>Bot Language</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD_ChatUserProfile__c</fullName>
        <description>Used for list views to filter chat owners who are supervisors, so that in the event of the supervisor is out-of-office, other supervisors can pick up from where they left off.</description>
        <formula>Owner:User.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chat User Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD_Country__c</fullName>
        <description>SD Health: Indicates which country the customer is from and it is used to identify which queue the chat is routed to.</description>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD_CustomerType__c</fullName>
        <description>SD Health: Indicates if the user who logged the case is an existing or non existing client and it is used to identify which queue the case is routed to.</description>
        <label>Customer Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD_Email__c</fullName>
        <description>User Email Detail.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SD_FirstName__c</fullName>
        <description>First Name retrieved from the chat bot.</description>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD_LastName__c</fullName>
        <description>Last Name retrieved from the chat bot</description>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD_MemberType__c</fullName>
        <description>SD Health: Indicates the customer&apos;s membership type with Liberty and it is used to identify which queue the case is routed to.</description>
        <label>Member Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD_Phone__c</fullName>
        <description>Customer Phone Number</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SD_ProductType__c</fullName>
        <description>SD Health: Indicates which product the customer has and it is used to identify which queue the case is routed to.</description>
        <label>Product Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD_TypeOfEnquiry__c</fullName>
        <label>Type of Enquiry</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD_WebOrigin__c</fullName>
        <description>This field provide a reference of Web Chat source.</description>
        <label>Web Origin</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>Name</columns>
        <columns>Status</columns>
        <columns>SD_FirstName__c</columns>
        <columns>SD_LastName__c</columns>
        <columns>SD_Country__c</columns>
        <columns>SD_MemberType__c</columns>
        <columns>SD_ProductType__c</columns>
        <columns>SD_TypeOfEnquiry__c</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Owner</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Case_Queue_LiveChatTranscript</fullName>
        <filterScope>Queue</filterScope>
        <label>Case Queue</label>
        <queue>AW_CaseQueue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyList</fullName>
        <columns>Name</columns>
        <columns>LiveChatVisitor</columns>
        <columns>Status</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <filterScope>Mine</filterScope>
        <label>My Chats</label>
    </listViews>
    <listViews>
        <fullName>SD_AllSupervisorChats</fullName>
        <columns>Name</columns>
        <columns>Status</columns>
        <columns>SD_FirstName__c</columns>
        <columns>SD_LastName__c</columns>
        <columns>SD_Country__c</columns>
        <columns>SD_MemberType__c</columns>
        <columns>SD_ProductType__c</columns>
        <columns>SD_TypeOfEnquiry__c</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Owner</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SD_ChatUserProfile__c</field>
            <operation>contains</operation>
            <value>Supervisor</value>
        </filters>
        <label>All Supervisor Chats</label>
        <sharedTo>
            <role>SD_MalawiLibertyHealthSupervisor</role>
            <role>SD_MozambiqueLibertyHealthSupervisor</role>
            <role>SD_SouthAfricaLibertyHealthSupervisor</role>
            <role>SD_UgandaLibertyHealthSupervisor</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SD_MalawiChats</fullName>
        <columns>Name</columns>
        <columns>Status</columns>
        <columns>SD_FirstName__c</columns>
        <columns>SD_LastName__c</columns>
        <columns>SD_CustomerType__c</columns>
        <columns>SD_MemberType__c</columns>
        <columns>SD_ProductType__c</columns>
        <columns>SD_TypeOfEnquiry__c</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Owner</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SD_Country__c</field>
            <operation>equals</operation>
            <value>Malawi</value>
        </filters>
        <label>Malawi Chats</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SD_MalawiLibertyHealthSupervisor</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SD_MissedChats</fullName>
        <columns>Name</columns>
        <columns>LiveChatVisitor</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Status</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>0,2</value>
        </filters>
        <label>Missed Chats</label>
    </listViews>
    <listViews>
        <fullName>SD_MozambiqueChats</fullName>
        <columns>Name</columns>
        <columns>Status</columns>
        <columns>SD_FirstName__c</columns>
        <columns>SD_LastName__c</columns>
        <columns>SD_CustomerType__c</columns>
        <columns>SD_MemberType__c</columns>
        <columns>SD_ProductType__c</columns>
        <columns>SD_TypeOfEnquiry__c</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Owner</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SD_Country__c</field>
            <operation>equals</operation>
            <value>Mozambique</value>
        </filters>
        <label>Mozambique Chats</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SD_MozambiqueLibertyHealthSupervisor</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SD_SouthAfricaChats</fullName>
        <columns>Name</columns>
        <columns>LiveChatVisitor</columns>
        <columns>Status</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SD_Country__c</field>
            <operation>equals</operation>
            <value>South Africa</value>
        </filters>
        <label>South Africa Chats</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SD_SouthAfricaLibertyHealthSupervisor</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SD_UgandaChats</fullName>
        <columns>Name</columns>
        <columns>Status</columns>
        <columns>SD_CustomerType__c</columns>
        <columns>SD_MemberType__c</columns>
        <columns>SD_ProductType__c</columns>
        <columns>SD_TypeOfEnquiry__c</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Owner</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SD_Country__c</field>
            <operation>equals</operation>
            <value>Uganda</value>
        </filters>
        <label>Uganda Chats</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SD_UgandaLibertyHealthSupervisor</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>SD_HealthSupportChatTranscript</fullName>
        <active>true</active>
        <description>SD Health: Chat transcript record type for Liberty Health support agents</description>
        <label>SD Health Support Chat Transcript</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>